--- a/sejong_Alli/app/src/main/res/values/strings.xml
+++ b/sejong_Alli/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">sejong_Alli</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="dev_addr">10.0.2.2:8080</string>
 </resources>
